// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditDisplayNameDialog /> renders correctly 1`] = `
<Modal
  isPrimaryDisabled={true}
  onClose={[Function]}
  onPrimaryClick={[MockFunction]}
  onSecondaryClick={[Function]}
  primaryText="Apply"
  title="Edit Cluster"
>
  <Form
    onSubmit={[MockFunction]}
  >
    <Field
      component={[Function]}
      label="Compute nodes"
      min={4}
      name="nodes_compute"
      type="number"
      validate={[Function]}
    />
    <FormSection
      component="div"
      name="network_router_shards"
    >
      <ControlLabel
        bsClass="control-label"
        srOnly={false}
      >
        Router Shards
      </ControlLabel>
       
      <Spinner
        className=""
        inline={true}
        inverse={false}
        loading={true}
        size="xs"
      />
      <Field
        component={[Function]}
        label=""
        name="0.label"
        normalize={[Function]}
        placeholder="Label"
        type="text"
        validate={[Function]}
      />
      <Field
        component={[Function]}
        label=""
        name="1.label"
        normalize={[Function]}
        placeholder="Label"
        type="text"
        validate={[Function]}
      />
    </FormSection>
  </Form>
</Modal>
`;

exports[`<EditDisplayNameDialog /> renders correctly when an erorr occurs 1`] = `
<Modal
  isPrimaryDisabled={true}
  onClose={[Function]}
  onPrimaryClick={[MockFunction]}
  onSecondaryClick={[Function]}
  primaryText="Apply"
  title="Edit Cluster"
>
  <ErrorBox
    message="Error editing cluster"
    response={
      Object {
        "erorMessage": "this is an error",
        "error": true,
      }
    }
  />
  <Form
    onSubmit={[MockFunction]}
  >
    <Field
      component={[Function]}
      label="Compute nodes"
      min={4}
      name="nodes_compute"
      type="number"
      validate={[Function]}
    />
    <FormSection
      component="div"
      name="network_router_shards"
    >
      <ControlLabel
        bsClass="control-label"
        srOnly={false}
      >
        Router Shards
      </ControlLabel>
       
      <Spinner
        className=""
        inline={true}
        inverse={false}
        loading={true}
        size="xs"
      />
      <Field
        component={[Function]}
        label=""
        name="0.label"
        normalize={[Function]}
        placeholder="Label"
        type="text"
        validate={[Function]}
      />
      <Field
        component={[Function]}
        label=""
        name="1.label"
        normalize={[Function]}
        placeholder="Label"
        type="text"
        validate={[Function]}
      />
    </FormSection>
  </Form>
</Modal>
`;
